# acc

./: .gitignore  .hlint.yaml  .stylish-haskell.yaml  README.md  Splee.hs  acc.cabal  shell.nix
main/: Main.hs
splee/: Main.hs
src/: AST.hs  Aarch64.hs  Acc.hs  Assembler.hs  C.hs  Elf.hs  Expr.hs  Fold.hs  IR.hs  Main.hs  Parser.hs  Pretty.hs  ResolveOffsets.hs  Types.hs  Util.hs
src/Arch/: Aarch64.hs  Amd64.hs  Class.hs  Cpu16.hs
src/Data/Binary/: Writer.hs
src/SPL/: Infer.hs  Main.hs  Parser.hs  Printer.hs  Resolver.hs  Syntax.hs
test/: unary.c
test/spl/: infer.spl  parse.spl
