cabal-version:           2.0

name:                    acc
version:                 0.1.0.0
author:                  Lars Jellema
maintainer:              lars.jellema@gmail.com
build-type:              Simple

executable acc
  main-is:               Main.hs
  hs-source-dirs:        src
  default-language:      Haskell2010
  ghc-options:           -Wall
  build-depends:
      base
    , containers
    , filepath
    , megaparsec
    , mtl
    , parser-combinators
    , process
    , text

  other-modules:
    Assembler
    C
    Expr
    IR
    Parser
    Util

  default-extensions:
    BlockArguments
    DeriveTraversable
    ImportQualifiedPost
    OverloadedStrings
