cabal-version:           2.0
name:                    acc
version:                 0.1.0.0
author:                  Lars Jellema
maintainer:              lars.jellema@gmail.com
build-type:              Simple

library
  hs-source-dirs:        src
  default-language:      Haskell2010
  ghc-options:           -Wall
  build-depends:
      base
    , binary
    , bytestring
    , containers
    , directory
    , filepath
    , megaparsec
    , mtl
    , parser-combinators
    , process
    , text
    , utf8-string

  exposed-modules:
    Assembler
    C
    Data.Binary.Writer
    Elf
    Expr
    IR
    Main
    Parser
    Util

  default-extensions:
    BlockArguments
    DeriveTraversable
    ImportQualifiedPost
    OverloadedStrings

executable acc
  main-is:               Main.hs
  hs-source-dirs:        main
  default-language:      Haskell2010
  ghc-options:           -Wall
  build-depends:
      acc
    , base

  default-extensions:
    ImportQualifiedPost
    PackageImports
